--- a/style.css
+++ b/style.css
@@ -48,16 +48,20 @@ body {
     padding: .5em;
 }
 nav {
+    box-shadow: 0 0 .5em rgba(0,0,0,.5);
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: stretch;
     background: var(--primary);
     font-family: var(--title);
     position: sticky;
     top: 0;
     font-size: calc(1rem + .3vw);
     .estimate {
-        padding: 1em 4em 1em 2em;
+        display: flex;
+        justify-items: center;
+        align-items: center;
+        padding: 0 4em 0 2em;
         background-color: var(--text);
         color: var(--primary);
         clip-path: polygon(0% 0%, 100.1% 0%, 75.1% 100.3%, 0% 100%);
@@ -108,7 +112,7 @@ nav {
     }
 }
 
-@media (width < 800px) {
+@media (width < 1200px) {
     nav {
     & ul {
         translate: -100vw 0;
@@ -117,6 +121,7 @@ nav {
         background-color: var(--background);
         width: 100vw;
         height: 100vh;
+        height: 100svh;
         flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
@@ -140,12 +145,50 @@ nav {
 }
 
 header {
+    text-align: center;
+    height: 100vh;
+    background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(kitchen4.avif);
+    background-position: center;
+    background-size: cover;
+    background-attachment: fixed;
     width: 100%;
     display: flex;
-    padding: 10vh 20vw;
-    .header-pics img {
-height: 20vw;
-aspect-ratio: 1.2;
-box-shadow: .5vw .5vw black;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 10vh 15vw 30vh 15vw;
+    & h1 {
+        text-shadow: 0 0 2vw black;
+        font-size: calc(1rem + 3vw);
+        font-weight: 1000;
+        font-family: var(--title);
+        color: var(--background);
+        text-transform: uppercase;
+    }
+    & h1 span {
+        
+        font-size: calc(1rem + 5vw);
+    }
+    & p, a{
+        margin-top: 1em;
+        text-shadow: 0 0 1vw black;
+        font-size: calc(1rem + 1vw);
+        font-weight: 300;
+        font-family: var(--sub);
+        color: var(--background);
+    } 
+    & a {
+        font-size: calc(1rem + .75vw);
+        text-transform: uppercase;
+        margin-top: 2em;
+        padding: .25em .5em;
+        font-family: var(--title);
+        text-decoration: none;
+        font-weight: 800;
+        border: .1em solid var(--background);
+        transition: .2s;
+    }
+    & a:hover {
+        translate: 0 -.2em;
     }
 }
