--- a/style.css
+++ b/style.css
@@ -122,7 +122,7 @@ nav {
         width: 100vw;
         height: 100vh;
         height: 100svh;
-        flex-direction: column;
+        flex-flow: column wrap;
         justify-content: space-evenly;
         align-items: center;
         position: fixed;
@@ -130,6 +130,7 @@ nav {
         right: 0;
     }
     & ul a {
+        width: 50vw;
         color: var(--primary);
         background-color: var(--background);
         border: .1em solid var(--primary);
@@ -145,6 +146,7 @@ nav {
 }
 
 header {
+    transition: .3s;
     text-align: center;
     height: 100vh;
     background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(kitchen4.avif);
@@ -191,4 +193,22 @@ header {
     & a:hover {
         translate: 0 -.2em;
     }
+}
+.about {
+display: flex;
+flex-direction: column;
+padding: 10vh 10vw;
+.cards {
+    display: flex;
+    gap: 5vw;
+
+}
+.card {
+    text-align: center;
+    flex: 1;
+}
+}
+iconify-icon{
+    font-size: calc(2rem + 4vw);
+    color: var(--primary);
 }
