--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 :root {
 --text: #000000;
 --background: #ffffff;
+--gray: #f8f8f8;
 --primary: #00bfff;
 --secondary: #cce7f0;
 --accent: #3699ba;
@@ -36,7 +37,6 @@
 body {
     position: relative;
     overflow-x: clip;
-    height: 500vh;
 }
 .catch {
     text-align: center;
@@ -48,6 +48,7 @@ body {
     padding: .5em;
 }
 nav {
+    z-index: 999;
     box-shadow: 0 0 .5em rgba(0,0,0,.5);
     display: flex;
     justify-content: space-between;
@@ -115,6 +116,7 @@ nav {
 @media (width < 1200px) {
     nav {
     & ul {
+        z-index: 1000;
         translate: -100vw 0;
         padding: 0;
         margin: 0;
@@ -122,14 +124,18 @@ nav {
         width: 100vw;
         height: 100vh;
         height: 100svh;
-        flex-flow: column wrap;
+        flex-direction: column;
         justify-content: space-evenly;
         align-items: center;
         position: fixed;
         top: 0;
         right: 0;
     }
+    & li {
+        text-align: center;
+    }
     & ul a {
+        display: inline-block;
         width: 50vw;
         color: var(--primary);
         background-color: var(--background);
@@ -197,18 +203,170 @@ header {
 .about {
 display: flex;
 flex-direction: column;
-padding: 10vh 10vw;
+padding: 10vh 10vw 3vh 10vw;
 .cards {
     display: flex;
-    gap: 5vw;
+    gap: 8vw;
 
 }
+.card::before {
+    z-index: -1;
+    content: '';
+    position: absolute;
+   bottom: -1em;
+    left: 25%;
+    width: 50%;
+    height: 2em;
+    background-color: var(--primary);
+    border-radius:1em;
+    transition: .2s;
+}
+& iconify-icon{
+    font-size: calc(2rem + 4vw);
+    color: var(--primary);
+} 
+}
 .card {
+    margin-bottom: 20vh;
+    margin-top: -15vh;
+    background-color: var(--background);
+    position: relative;
+    border-radius: 3%;
+    border: .1em solid black;
+    padding: 1.5em 1em 2em 1em;
     text-align: center;
     flex: 1;
 }
+.card:hover::before{
+    width: 80%;
+    left: 10%;
 }
-iconify-icon{
-    font-size: calc(2rem + 4vw);
-    color: var(--primary);
+.card h2 {
+    margin-top: .5em;
+        font-size: calc(1rem + 1vw);
+        font-weight: 1000;
+        font-family: var(--title);
+        color: var(--text);
+        text-transform: uppercase;
+}
+.card p {
+    margin-top: .5em;
+    font-size: calc(1rem + .2vw);
+        font-weight: 400;
+        font-family: var(--sub);
+        color: var(--text);
+}
+
+
+
+@media (width< 1200px) {
+    .about .cards {
+        flex-direction: column;
+    }
+}
+
+footer {
+    
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    & img {
+        object-fit: contain;
+        width: max(10vw, 15vh);
+    }
+    .footer-top {
+        padding: 0 5vw;
+        display: flex;
+        justify-content: space-around;
+        flex-flow: row wrap;
+    }
+    .footer-icons {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: calc(1rem + 2vw);
+    }
+    & iconify-icon{
+        font-size: calc(1rem + 2vw);
+        color: var(--text);
+    }
+    & .hours{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-flow: row wrap;
+    }
+    & .hours p {
+        padding: .2em .4em;
+        font-size: calc(1rem + .5vw);
+        font-weight: 800;
+        font-family: var(--title);
+       border: .1em solid black;
+    }
+    & ul {
+        white-space: nowrap;
+        padding: 1em;
+        list-style: none;
+        font-size: calc(.5rem + 1vw);
+        font-weight: 200;
+        font-family: var(--title);
+    }
+    .footer-footer {
+        font-size: calc(.5rem + .5vw);
+        padding: 1em;
+        font-family: var(--sub);
+        background-color: var(--text);
+        color: var(--background);
+        display: flex;
+        justify-content: space-around;
+    }
+}
+
+main {
+    display: flex;
+    justify-content: space-evenly;
+    font-size: calc(1rem + .2vw);
+        font-weight: 400;
+        font-family: var(--sub);
+        color: var(--text);
+.bio {
+    max-width: 60ch;
+}
+& h3 {
+    margin-left: -1em;
+    font-size: calc(1rem + 1vw);
+        font-weight: 800;
+        font-family: var(--title);
+        color: var(--text);
+}
+& p {
+    text-align: justify;
+    opacity: .8;
+    padding: 1em;
+}
+.certifications{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 2em;
+}
+& img {
+    object-fit: contain;
+        max-width: max(10vw, 10vh);
+}
+
+}
+
+@media (width< 1000px) {
+    main{
+        flex-direction: column;
+        .certifications {
+            margin-top: 1em;
+            flex-direction: row;
+            justify-content: center;
+        }
+        & h3{
+            text-align: center;
+        }
+    }
 }
