--- a/style.css
+++ b/style.css
@@ -154,6 +154,7 @@ header {
     transition: .3s;
     text-align: center;
     height: 100vh;
+    height: 100lvh;
     background-image: linear-gradient(rgba(0,0,0,.5), rgba(0,0,0,.5)), url(kitchen4.avif);
     background-position: center;
     background-size: cover;
