--- a/style.css
+++ b/style.css
@@ -416,6 +416,7 @@ main {
         background-position: center;
     }
     .service-boxes div p {
+        width: 100%;
         transition: .5s;
         position: absolute;
         margin: 0;
@@ -428,16 +429,14 @@ main {
             text-transform: uppercase;
     }
     .service-boxes div p:nth-of-type(2) {
-        padding: 1em;
         font-size: calc(1rem + .5vw);
             font-weight: 300;
             font-family: var(--sub);
-            color: var(--background);
             text-transform: unset;
        translate: 100%;
     }
     .service-boxes div:hover p:nth-of-type(1), .service-boxes div:active p:nth-of-type(1) {
-        translate: -30ch;
+        translate: -100%;
     }
     .service-boxes div:hover p:nth-of-type(2), .service-boxes div:active p:nth-of-type(2) {
         translate: 0;
