--- a/style.css
+++ b/style.css
@@ -711,6 +711,7 @@ footer {
 
 #portfolio {
     padding-top: 10vh;
+    padding-bottom: 5vw;
     & h5 {
         text-align: center;
             text-transform: uppercase;
@@ -726,8 +727,8 @@ footer {
         font-family: var(--sub);
     }
     & img {
-        width: 100%;
-       height: 70vh;
+        width: min(80vh, 80vw);
+       aspect-ratio: 16 / 9;
         object-fit: cover;
         border: solid .1em black;
         border-radius: .5em;
@@ -736,7 +737,7 @@ footer {
                 z-index: -1;
                 content: '';
                 position: absolute;
-                bottom: -.75em;
+                bottom: -.7em;
                 left: 25%;
                 width: 50%;
                 height: 2em;
@@ -746,24 +747,26 @@ footer {
                 -o-transition: .2s;
                 transition: .2s;
     }
-        .mySlides:hover::before {
+    .mySlides:hover::before {
             width: 80%;
             left: 10%;
         }
     
-        .slideshow-container {
+    .slideshow-container {
             padding-top: 5vw;
-            width: min(1000px, 85vw);
+            width: fit-content;
             position: relative;
             margin: auto;
-        }
+            display: flex;
+            justify-content: center;
+    }
     
-        .mySlides {
+    .mySlides {
             display: none;
-        }
+    }
     
-        .prev,
-        .next {
+    .prev,
+    .next {
             cursor: pointer;
             position: absolute;
             top: 50%;
@@ -790,6 +793,112 @@ footer {
         .next:hover {
         scale: .9;
         }
-    
     }
+
+#reviews {
+    padding-top: 10vh;
+    padding-bottom: 5vw;
+        background-color: var(--grey);
     
+        & h6 {
+            text-align: center;
+            text-transform: uppercase;
+            font-size: calc(1rem + 2vw);
+            font-weight: 1000;
+            font-family: var(--title);
+        }
+    
+        & p {
+            margin: 1em 1em 0 1em;
+            text-align: center;
+            font-size: calc(1rem + .2vw);
+            font-weight: 400;
+            font-family: var(--sub);
+        }
+        .review{
+            position: relative;
+            width: 80%;
+            padding: 1em;
+            border-radius: 1em;
+        }
+        .review::before{
+            z-index: 10;
+            content: '``';
+            font-size: calc(3rem + 10vw);
+            font-weight: 1000;
+                font-family: var(--sub);
+                color: var(--primary);
+                position: absolute;
+                letter-spacing: -.2em;
+                top: -.2em;
+        }
+        .review:nth-of-type(1)::before {
+            right: 1em;
+        }
+        .review:nth-of-type(2)::before {
+            left: 1em;
+        }
+        
+        .review:nth-of-type(odd) {
+            margin: 5vw 5vw 0 auto;
+        }
+        .review:nth-of-type(even) {
+            margin: 5vw auto 0 5vw;
+        }
+        .review:nth-of-type(1) .person{
+            display: flex;
+            align-items: flex-end;
+        }
+                .review:nth-of-type(2) .person {
+            display: flex;
+                align-items: flex-end;
+                justify-content: flex-end;
+        }
+        .name {
+            font-size: calc(1rem + .3vw);
+                font-weight: 1000;
+                font-family: var(--title);
+                color: var(--text);
+        }
+        & img {
+            z-index: 15;
+            height: 5em;
+            border-radius: 50%;
+            aspect-ratio: 1;
+            object-fit: cover;
+            margin: 0 1em;
+        }
+        .review p {
+            text-align: left;
+                opacity: .8;
+                font-size: calc(1rem + .2vw);
+                    font-weight: 400;
+                    font-family: var(--sub);
+                    color: var(--text);
+        }
+        .review:hover::before {
+            animation: jump 3s infinite;
+        }
+        .person {
+            margin: 0 10vw;
+        }
+}
+    @keyframes jump {
+        0%, 40%, 60%, 80% {
+            translate: 0;
+        }
+        50%, 70% {
+            translate: 0 -.08em;
+        }
+    }
+
+    @media (width < 800px) {
+    .review{
+        width: 100% !important;
+        margin: 5vw 0 0 0 !important;
+        & p {
+            text-align: justify !important;
+            margin: 0;
+        }
+        }
+    }
