--- a/style.css
+++ b/style.css
@@ -869,7 +869,7 @@ footer {
             margin: 0 1em;
         }
         .review p {
-            text-align: left;
+            text-align: justify;
                 opacity: .8;
                 font-size: calc(1rem + .2vw);
                     font-weight: 400;
@@ -897,7 +897,6 @@ footer {
         width: 100% !important;
         margin: 5vw 0 0 0 !important;
         & p {
-            text-align: justify !important;
             margin: 0;
         }
         }
