--- a/style.css
+++ b/style.css
@@ -779,6 +779,7 @@ footer {
     
     .prev,
     .next {
+        line-height: 1;
             cursor: pointer;
             position: absolute;
             top: 50%;
