--- a/style.css
+++ b/style.css
@@ -11,6 +11,13 @@
 * Autoprefixer: v10.4.7
 * Browsers: last 4 version
 */
+
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
 :root {
   --text: #000000;
   --background: #ffffff;
@@ -57,6 +64,20 @@ html {
 body {
   position: relative;
   overflow-x: clip;
+}
+
+#background {
+  z-index: 1900;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.display-none {
+  display: none;
 }
 
 .catch {
@@ -374,7 +395,7 @@ header {
   background-color: var(--background);
   position: relative;
   border-radius: 3%;
-  border: 0.1em solid black;
+  border: 2px solid black;
   padding: 1.5em 1em 2em 1em;
   text-align: center;
   -webkit-box-flex: 1;
@@ -518,6 +539,9 @@ footer {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-flow: row wrap;
   flex-flow: row wrap;
   -webkit-box-pack: space-evenly;
   -ms-flex-pack: space-evenly;
@@ -567,8 +591,14 @@ footer {
   }
 
   & a {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
     align-items: center;
     width: max(10vw, 10vh);
   }
@@ -580,8 +610,11 @@ footer {
   }
   .areas {
     margin: 3em;
+    -ms-flex-preferred-size: 100%;
     flex-basis: 100%;
+    display: -ms-grid;
     display: grid;
+    -ms-grid-columns: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr 1fr;
     place-items: center;
     font-size: calc(1rem + 0.5vw);
@@ -620,8 +653,11 @@ footer {
     }
     .areas {
       margin: 8vw 5vw 0;
+      -ms-flex-preferred-size: 100%;
       flex-basis: 100%;
+      display: -ms-grid;
       display: grid;
+      -ms-grid-columns: 1fr 1fr;
       grid-template-columns: 1fr 1fr;
       place-items: center;
       font-size: calc(1rem + 0.5vw);
@@ -824,6 +860,7 @@ footer {
 }
 
 #portfolio {
+  overflow: clip;
   position: relative;
   padding-top: 10vh;
   padding-bottom: 5vw;
@@ -843,155 +880,130 @@ footer {
     font-weight: 400;
     font-family: var(--sub);
   }
-
-  .CSSgal {
-    margin: auto;
-    width: min(90vw, 1000px);
+  #slideshow-container {
     position: relative;
-    overflow: clip;
-    aspect-ratio: 16 / 9;
-    margin-top: 5vw;
-  }
-
-  .CSSgal #s1,
-  .CSSgal #s2,
-  .CSSgal #s3,
-  .CSSgal #s4 {
-    position: absolute;
-    top: calc(-1 * ((100vh - (9 / 16 * min(90vw, 1000px))) / 2));
-  }
-
-  .CSSgal .slider {
-    height: 100%;
-    white-space: nowrap;
-    font-size: 0;
-    -webkit-transition: 0.8s;
-    -o-transition: 0.8s;
-    transition: 0.8s;
-  }
-
-  .CSSgal .slider > * {
-    translate: -1em -1em;
-    margin: 1em;
-    font-size: 1rem;
-    display: inline-block;
-    white-space: normal;
-    vertical-align: top;
-    height: 100%;
-    width: 100%;
-    background: none 50% no-repeat;
-    background-size: cover;
-  }
-
-  .CSSgal .prevNext {
-    position: absolute;
-    z-index: 1;
-    top: 50%;
-    width: 100%;
-    height: 0;
-  }
-
-  .CSSgal .prevNext > div + div {
-    visibility: hidden;
-  }
-
-  .CSSgal .prevNext a {
-    color: var(--background);
+    width: min(90vw, 600px);
+    margin: 3em auto 0;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-pack: center;
     -ms-flex-pack: center;
     justify-content: center;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    align-items: center;
-    font-size: calc(2rem + 3vw);
-    background: var(--primary);
+  }
+  #slidesContainer {
+    position: relative;
+    min-height: 50vh;
+  }
+
+  & img {
+    background-color: var(--background);
+    height: 50vh;
+    border: 2px solid black;
+    -webkit-box-shadow: 5px 5px black;
+    box-shadow: 5px 5px black;
+    max-width: 90vw;
+  }
+  & img:nth-of-type(1) {
+    -o-object-fit: cover;
+    object-fit: cover;
+    aspect-ratio: 16/9;
     position: absolute;
-    width: 1em;
-    height: 1em;
+    left: 0;
+    translate: -50%;
+    scale: 60%;
+    z-index: -1;
+  }
+  & img:nth-of-type(2) {
+    aspect-ratio: 16/9;
+    -o-object-fit: cover;
+    object-fit: cover;
+    position: absolute;
+    right: 0;
+    translate: 50%;
+    scale: 60%;
+    z-index: -1;
+  }
+
+  #prevBtn,
+  #nextBtn {
+    background-color: var(--background);
+    border: 2px solid black;
+    aspect-ratio: 1;
+    width: calc(2rem + 3vw);
+    position: absolute;
+    top: 50%;
+    translate: 0 -50%;
+    font-weight: bold;
+    font-size: 3vw;
+    -webkit-transition: 0.3s ease;
+    -o-transition: 0.3s ease;
+    transition: 0.3s ease;
+    border-radius: 50%;
+
+    overflow: visible;
+    -webkit-box-shadow: 3px 3px black;
+    box-shadow: 3px 3px black;
+  }
+
+  #prevBtn {
+    right: calc(65% + 15vw);
+  }
+  #nextBtn {
+    left: calc(65% + 15vw);
+  }
+
+  #prevBtn:hover,
+  #nextBtn:hover {
+    -webkit-box-shadow: 0 0 black;
+    box-shadow: 0 0 black;
+  }
+
+  .button-container {
     text-align: center;
+    margin: 1em 1em 1em;
+  }
+
+  .category-btn {
+    -webkit-box-shadow: 2px 2px black;
+    box-shadow: 2px 2px black;
     -webkit-transition: 0.3s;
     -o-transition: 0.3s;
     transition: 0.3s;
-    -webkit-transform: translateY(-50%);
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
-    left: 0.5em;
+    background-color: var(--background);
+    font-family: var(--title);
+    text-transform: uppercase;
+    font-size: calc(0.5rem + 1vw);
+    font-weight: 1000;
+    padding: 0.25em 0.5em;
+    margin: 0 10px;
   }
 
-  .CSSgal .prevNext a:hover {
-    opacity: 0.9;
+  .category-btn:nth-of-type(1) {
+    -webkit-box-shadow: 0 0 black;
+    box-shadow: 0 0 black;
   }
-
-  .CSSgal .prevNext a + a {
-    left: auto;
-    right: 0.5em;
+  .category-btn:hover {
+    -webkit-box-shadow: 0 0 black;
+    box-shadow: 0 0 black;
   }
+  .modul {
+    z-index: 2000 !important;
+    position: fixed !important;
 
-  .CSSgal > s:target ~ .prevNext > * {
-    visibility: hidden;
+    top: 50% !important;
+    left: 50% !important;
+    -webkit-transform: translate(-50%, -50%) !important;
+    -ms-transform: translate(-50%, -50%) !important;
+    transform: translate(-50%, -50%) !important;
   }
-
-  #s1:target ~ .prevNext > *:nth-child(1) {
-    visibility: visible;
+  .tall {
+    height: 90vh !important;
+    width: auto !important;
   }
-
-  #s2:target ~ .prevNext > *:nth-child(2) {
-    visibility: visible;
-  }
-
-  #s3:target ~ .prevNext > *:nth-child(3) {
-    visibility: visible;
-  }
-
-  #s4:target ~ .prevNext > *:nth-child(4) {
-    visibility: visible;
-  }
-
-  #s1:target ~ .slider {
-    -ms-transform: translateX(0%);
-    transform: translateX(0%);
-    -webkit-transform: translateX(0%);
-  }
-
-  #s2:target ~ .slider {
-    -ms-transform: translateX(calc(-100% - 2rem));
-    transform: translateX(calc(-100% - 2rem));
-    -webkit-transform: translateX(calc(-100% - 2rem));
-  }
-
-  #s3:target ~ .slider {
-    -ms-transform: translateX(calc(-200% - 4rem));
-    transform: translateX(calc(-200% - 4rem));
-    -webkit-transform: translateX(calc(-200% - 4rem));
-  }
-
-  #s4:target ~ .slider {
-    -ms-transform: translateX(calc(-300% - 6rem));
-    transform: translateX(calc(-300% - 6rem));
-    -webkit-transform: translateX(calc(-300% - 6rem));
-  }
-
-  .CSSgal {
-    color: #fff;
-    text-align: center;
-  }
-
-  .CSSgal .slider h2 {
-    margin-top: 40vh;
-    font-weight: 200;
-    letter-spacing: -0.06em;
-    word-spacing: 0.2em;
-    font-size: 3em;
-  }
-
-  .CSSgal a {
-    border-radius: 50%;
-    margin: 0 3px;
-    color: rgba(0, 0, 0, 0.8);
-    text-decoration: none;
+  .wide {
+    width: 90vw !important;
+    height: auto !important;
   }
 }
 
